--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,22 @@
 }
 
 body {
-  background-color: grey;
+  background-color: white;
 }
-
+h1{
+  text-align: center;
+  border: solid black;
+}
+p::first-letter {
+  font-size: 200%;
+  text-transform: capitalize;
+}
+p{
+  text-align: center;
+}
 .animals {
-  max-width: 200px;
+  width: 400px;
+  height: 300px;
 }
 
 .map {
